[backend] feat(chaining): rebase